# AI-Agent-Team

./: .env.example  .gitignore  CHANGES.md  README.md  mcp.json.example  pyproject.toml  setup.sh
demo/: cli-demo.cast  record-demo.sh
skills/architecture/: SKILL.md
skills/brainstorming/: SKILL.md
skills/coding/: SKILL.md
skills/execution/: SKILL.md
skills/thinking/: SKILL.md
src/agent_team/: config.py  events.py
src/agent_team/agents/: complexity.py  context.py  definitions.py  http_runner.py  intent.py  router.py  runner.py  session.py  task_graph.py
src/agent_team/artifacts/: __init__.py  renderer.py  store.py  types.py
src/agent_team/cli/: classic.py  interactive.py
src/agent_team/domains/: __init__.py  base.py  coding.py  data.py  general.py  registry.py  research.py  writing.py
src/agent_team/files/: scaffolder.py  writer.py
src/agent_team/gateway/: __init__.py  entry.py  formatting.py  telegram.py
src/agent_team/learning/: extractor.py  feedback.py  patterns.py
src/agent_team/llm/: __init__.py  base.py  credential_pool.py  huggingface_provider.py  keys.py  ollama_provider.py  openai_compat.py  pricing.py  prompt_cache.py  providers.py  rate_tracker.py  registry.py
src/agent_team/mcp/: __init__.py  capabilities.py  client.py  config.py  registry.py  (+4 more)
tests/: mocks.py  test_database_feedback.py  test_domains.py  test_e2e_qa.py  test_event_emitter.py  test_gateway_telegram.py  test_intent_router.py  test_provider_industrialization.py  test_providers.py  test_sanitizer.py  test_skills_evolution.py  test_task_graph.py  test_tavily_live.py
(+25 files in other folders)
