[project]
name = "ai-agent-team"
version = "2.1.0"
description = "Self-learning local AI agent team for coding, thinking, brainstorming, architecture, and execution"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "httpx==0.27.2",
    "python-multipart>=0.0.18",
    "gradio==5.9.1",
    "typer>=0.16",
    "requests>=2.32.5",
    "click<8.3",
    "websockets>=14.0",
    "sqlite-vec>=0.1.1",
    "numpy>=1.26",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "rich>=14.3.3",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
agent-team = "agent_team.cli.interactive:main_sync"
agent-team-classic = "agent_team.cli.classic:app"

[tool.setuptools.packages.find]
where = ["src"]
